feat: change from tablesaw to DFlib