@@ -1,7 +1,7 @@
-package com.tablesaw.benchmark.defaults;
+package com.benchmark.defaults;
 
 import com.sun.management.OperatingSystemMXBean;
-import com.tablesaw.logicTablesaw.TablesawLogic;
+import com.logic.DFLibLogic;
 import java.lang.management.ManagementFactory;
 import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
@@ -16,28 +16,13 @@ import org.openjdk.jmh.annotations.*;
     jvmArgsAppend = {
         "-Xms14G", 
         "-Xmx14G", 
-        "-XX:+UseG1GC",
-        // Hadoop Reflection Workarounds für Java 16+ / 21 / 25
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.net=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-        "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
-        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
-        "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+        "-XX:+UseG1GC"
     }
 )
 @State(Scope.Benchmark)
 public abstract class BenchmarkDefaults {
 
-  protected final TablesawLogic logic;
+  protected final DFLibLogic logic;
   protected final OperatingSystemMXBean os;
 
   private long realBefore;
@@ -46,16 +31,16 @@ public abstract class BenchmarkDefaults {
   private final Path dataOutDir;
   private final Path writeRootDir;
 
-  @Param({"20k", "80k", "320k", "1280k", "5120k", "20480k"})
+  @Param({"31.25k", "125k", "500k", "2000k", "8000k"})
   protected String flightsDataset;
 
   protected BenchmarkDefaults() {
-    this.logic = new TablesawLogic();
+    this.logic = new DFLibLogic();
     this.os = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
 
     Path cwd = Path.of("").toAbsolutePath().normalize();
     Path repoRoot = cwd.endsWith("java") ? cwd.getParent() : cwd;
-    this.dataOutDir = repoRoot.resolve("data-gen/out");
+    this.dataOutDir = repoRoot.resolve("data_gen/out");
     this.writeRootDir = repoRoot.resolve("java/out/jmh-write");
   }
 
